kube/deploy/apps/home-assistant/app/netpol.yaml
---
# yaml-language-server: $schema=https://crds.jank.ing/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: &app home-assistant
  namespace: *app
spec:
  endpointSelector: {}
  ingress:
    - fromCIDR: &privIPv4
        - "10.0.0.0/8"
        - "172.16.0.0/12"
        - "192.168.0.0/16"
        - "100.64.0.0/10"
      toPorts:
        - ports:
            - port: "21061"
              protocol: TCP
            - port: "21062"
              protocol: TCP
            - port: "21063"
              protocol: TCP
            - port: "21064"
              protocol: TCP
            - port: "21065"
              protocol: TCP
            - port: "21066"
              protocol: TCP
  ingressDeny: # only ingress can hit HTTP port
    - fromEntities: [world]
      toPorts:
        - ports:
            - port: "8123"
              protocol: ANY
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: go2rtc
            app.kubernetes.io/name: go2rtc
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: media
            app.kubernetes.io/name: plex
    - toFQDNs:
        # HACS
        - matchPattern: "*.hacs.xyz"
        # Public Data
        - matchPattern: "*.data.gov.sg"
        # Tapo Camera Control
        - matchPattern: "wheels.home-assistant.io"
